.metals/metals.log
2023.02.09 12:45:08 INFO  tracing is disabled for protocol LSP, to enable tracing of incoming and outgoing JSON messages create an empty file at /home/_alk/Documentos/PEV/.metals/lsp.trace.json or /home/_alk/.cache/metals/lsp.trace.json
2023.02.09 12:45:08 INFO  logging to file /home/_alk/Documentos/PEV/.metals/metals.log
2023.02.09 12:45:08 INFO  Started: Metals version 0.11.10 in workspace '/home/_alk/Documentos/PEV' for client Visual Studio Code 1.75.0.
SLF4J: No SLF4J providers were found.
SLF4J: Defaulting to no-operation (NOP) logger implementation
SLF4J: See https://www.slf4j.org/codes.html#noProviders for further details.
SLF4J: Class path contains SLF4J bindings targeting slf4j-api versions 1.7.x or earlier.
SLF4J: Ignoring binding found at [jar:file:/home/_alk/.cache/coursier/v1/https/repo1.maven.org/maven2/com/outr/scribe-slf4j_2.13/3.10.5/scribe-slf4j_2.13-3.10.5.jar!/org/slf4j/impl/StaticLoggerBinder.class]
SLF4J: See https://www.slf4j.org/codes.html#ignoredBindings for an explanation.
2023.02.09 12:45:10 INFO  time: initialize in 1.48s
2023.02.09 12:45:12 WARN  Build server is not auto-connectable.
2023.02.09 12:45:12 WARN  no build tool detected in workspace '/home/_alk/Documentos/PEV'. The most common cause for this problem is that the editor was opened in the wrong working directory, for example if you use sbt then the workspace directory should contain build.sbt. 
2023.02.09 12:45:12 WARN  no build target for: /home/_alk/Documentos/PEV/P01/src/genetic_algorithm/selections/Selection.java
2023.02.09 12:45:12 WARN  no build target for: /home/_alk/Documentos/PEV/P01/src/genetic_algorithm/selections/RouletteSelection.java
2023.02.09 12:45:15 INFO  time: code lens generation in 2.76s
2023.02.09 12:46:22 WARN  no build target for: /home/_alk/Documentos/PEV/P01/src/genetic_algorithm/selections/RouletteSelection.java
2023.02.09 12:46:23 WARN  Running javac-semanticdb failed for file:///home/_alk/Documentos/PEV/P01/src/genetic_algorithm/selections/RouletteSelection.java. Output:
/home/_alk/Documentos/PEV/P01/src/genetic_algorithm/selections/RouletteSelection.java:31: error: illegal start of expression
    while(seleccionados < )
                          ^
1 error
2023.02.09 12:46:25 WARN  no build target for: /home/_alk/Documentos/PEV/P01/src/genetic_algorithm/selections/Selection.java
2023.02.09 12:46:27 INFO  time: code lens generation in 2.01s
2023.02.09 12:48:48 WARN  no build target for: /home/_alk/Documentos/PEV/P01/src/genetic_algorithm/selections/RouletteSelection.java
feb 09, 2023 12:49:06 P. M. org.eclipse.lsp4j.jsonrpc.services.GenericEndpoint notify
INFO: Unsupported notification method: $/setTrace
2023.02.09 12:49:30 WARN  no build target for: /home/_alk/Documentos/PEV/P01/src/genetic_algorithm/selections/RouletteSelection.java
2023.02.09 12:49:31 WARN  Running javac-semanticdb failed for file:///home/_alk/Documentos/PEV/P01/src/genetic_algorithm/selections/RouletteSelection.java. Output:
/home/_alk/Documentos/PEV/P01/src/genetic_algorithm/selections/RouletteSelection.java:34: error: illegal start of statement
    }
    ^
1 error
2023.02.09 12:49:31 INFO  shutting down Metals
2023.02.09 12:49:48 INFO  tracing is disabled for protocol LSP, to enable tracing of incoming and outgoing JSON messages create an empty file at /home/_alk/Documentos/PEV/.metals/lsp.trace.json or /home/_alk/.cache/metals/lsp.trace.json
2023.02.09 12:49:50 INFO  logging to file /home/_alk/Documentos/PEV/.metals/metals.log
2023.02.09 12:49:50 INFO  Started: Metals version 0.11.10 in workspace '/home/_alk/Documentos/PEV' for client Visual Studio Code 1.75.0.
SLF4J: No SLF4J providers were found.
SLF4J: Defaulting to no-operation (NOP) logger implementation
SLF4J: See https://www.slf4j.org/codes.html#noProviders for further details.
SLF4J: Class path contains SLF4J bindings targeting slf4j-api versions 1.7.x or earlier.
SLF4J: Ignoring binding found at [jar:file:/home/_alk/.cache/coursier/v1/https/repo1.maven.org/maven2/com/outr/scribe-slf4j_2.13/3.10.5/scribe-slf4j_2.13-3.10.5.jar!/org/slf4j/impl/StaticLoggerBinder.class]
SLF4J: See https://www.slf4j.org/codes.html#ignoredBindings for an explanation.
2023.02.09 12:49:57 INFO  time: initialize in 6.44s
2023.02.09 12:50:00 WARN  Build server is not auto-connectable.
2023.02.09 12:50:00 WARN  no build tool detected in workspace '/home/_alk/Documentos/PEV'. The most common cause for this problem is that the editor was opened in the wrong working directory, for example if you use sbt then the workspace directory should contain build.sbt. 
2023.02.09 12:50:00 WARN  no build target for: /home/_alk/Documentos/PEV/P01/src/genetic_algorithm/selections/RouletteSelection.java
2023.02.09 12:50:01 WARN  Running javac-semanticdb failed for file:///home/_alk/Documentos/PEV/P01/src/genetic_algorithm/selections/RouletteSelection.java. Output:
/home/_alk/Documentos/PEV/P01/src/genetic_algorithm/selections/RouletteSelection.java:34: error: illegal start of statement
    }
    ^
1 error
2023.02.09 12:50:01 INFO  time: code lens generation in 1.14s
2023.02.09 12:50:05 INFO  shutting down Metals
